objects/Assesment__c.object
<CustomObject>
    <fields>
        <fullName>IOS_for_Academic_motivation__c</fullName>
        <description>Indicator of strength for Academic motivation</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Academic motivation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Action_orientation__c</fullName>
        <description>Indicator of strength for Action orientation</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Action orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Assertiveness__c</fullName>
        <description>Indicator of strength for Assertiveness</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Assertiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Critical_thinking__c</fullName>
        <description>Indicator of strength for Critical thinking</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Critical thinking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Emotion_control__c</fullName>
        <description>Indicator of strength for Emotion control</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Emotion control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Empathy__c</fullName>
        <description>Indicator of strength for Empathy</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Learning_interest__c</fullName>
        <description>Indicator of strength for Learning interest</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Learning interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Optimism__c</fullName>
        <description>Indicator of strength for Optimism</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Optimism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Perseverance__c</fullName>
        <description>Indicator of strength for Perseverance</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Perseverance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Reflection__c</fullName>
        <description>Indicator of strength for Reflection</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Reflection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Relationships_with_adults__c</fullName>
        <description>Indicator of strength for Relationships with adults</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Relationships with adults</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Relationships_with_peers__c</fullName>
        <description>Indicator of strength for Relationships with peers</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Relationships with peers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_School_Bonding__c</fullName>
        <description>Indicator of strength for School Bonding</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for School Bonding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOS_for_Trust__c</fullName>
        <description>Indicator of strength for Trust</description>
        <inlineHelpText>0: Not strength; 1: Strength</inlineHelpText>
        <label>IOS for Trust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISIP_Overall_Reading_Ability_Score__c</fullName>
        <description>ISIP Overall Reading Ability Score Values -5000 to 5000</description>
        <label>ISIP Overall Reading Ability Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISIP_Overall_Reading_Ability_Target_Scor__c</fullName>
        <description>ISIP Overall Reading Ability Score Values -5000 to 5000</description>
        <label>ISIP Overall Reading Ability Target Scor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_interest__c</fullName>
        <label>Learning interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_interest_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Learning interest z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_Code__c</fullName>
        <label>Level Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexia_Step_Number_Target_Score__c</fullName>
        <label>Lexia Step Number Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexia_Step_Number__c</fullName>
        <label>Lexia Step Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexile_Score__c</fullName>
        <inlineHelpText>Lexile scores measure the difficulty of a reading passage and the reading level of the reader on the same scale</inlineHelpText>
        <label>Lexile Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexile_Student_Target_Score__c</fullName>
        <label>Lexile Student Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT(Student__r.School__r.Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masters_Grade_Level__c</fullName>
        <description>STAAR performance standards relate levels of test performance to the expectations defined in the state-mandated curriculum standards known as the Texas Essential Knowledge and Skills (TEKS).</description>
        <inlineHelpText>STAAR performance standards relate levels of test performance to the expectations defined in the state-mandated curriculum standards known as the Texas Essential Knowledge and Skills (TEKS).</inlineHelpText>
        <label>Masters Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Math_Percent_Correct__c</fullName>
        <label>Math Percent Correct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Score__c</fullName>
        <label>Maximum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maze_Student_Target_Score__c</fullName>
        <description>A task that measures how well a student understands a passage they read silently</description>
        <inlineHelpText>A task that measures how well a student understands a passage they read silently</inlineHelpText>
        <label>Maze Student Target Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maze__c</fullName>
        <description>A task that measures how well a  student understands a passage they read silently</description>
        <inlineHelpText>A task that measures how well a  student understands a passage they read silently</inlineHelpText>
        <label>Maze</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meets_Grade_Level__c</fullName>
        <description>STAAR performance standards relate levels of test performance to the expectations defined in the state-mandated curriculum standards known as the Texas Essential Knowledge and Skills (TEKS).</description>
        <inlineHelpText>STAAR performance standards relate levels of test performance to the expectations defined in the state-mandated curriculum standards known as the Texas Essential Knowledge and Skills (TEKS).</inlineHelpText>
        <label>Meets Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Absences__c</fullName>
        <label>Number of Absences</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Detentions__c</fullName>
        <label>Number of Detentions</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Excused_Absences__c</fullName>
        <label>Number of Excused Absences</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_In_School_Suspensions__c</fullName>
        <label>Number of In-School Suspensions</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Office_Referrals__c</fullName>
        <label>Number of Office Referrals</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Out_of_School_Suspensions__c</fullName>
        <label>Number of Out-of-School Suspensions</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Suspensions__c</fullName>
        <inlineHelpText>Total number of in-school and out-of school suspensions</inlineHelpText>
        <label>Number of Suspensions</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tardies__c</fullName>
        <label>Number of Tardies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unexcused_Absences__c</fullName>
        <label>Number of Unexcused Absences</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimism__c</fullName>
        <label>Optimism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optimism_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Optimism z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimistic_Thinking_Description__c</fullName>
        <label>Optimistic Thinking Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <color>#FF6666</color>
                    <label>N</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <color>#33FFFF</color>
                    <label>T</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <color>#33FF33</color>
                    <label>S</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optimistic_Thinking_Percentile__c</fullName>
        <label>Optimistic Thinking Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimistic_Thinking_Raw_Score__c</fullName>
        <label>Optimistic Thinking Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimistic_Thinking_T_Score__c</fullName>
        <label>Optimistic Thinking T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oral_Reading_Fluency_Student_Target_Scor__c</fullName>
        <label>Oral Reading Fluency Student Target Scor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_School_Salesforce_Id__c</fullName>
        <label>Original School Salesforce Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_School__c</fullName>
        <label>Original School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Correct__c</fullName>
        <description>The students overall score on the  test, based on 25 questions</description>
        <inlineHelpText>The students overall score on the  test, based on 25 questions</inlineHelpText>
        <label>Percent Correct</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentile_Target_Score__c</fullName>
        <label>Percentile Target Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentile__c</fullName>
        <label>Percentile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perseverance__c</fullName>
        <label>Perseverance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perseverance_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Perseverance z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Responsibility_Description__c</fullName>
        <label>Personal Responsibility Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Responsibility_Percentile__c</fullName>
        <label>Personal Responsibility Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Responsibility_Raw_Score__c</fullName>
        <label>Personal Responsibility Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Responsibility_T_Score__c</fullName>
        <label>Personal Responsibility T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_mid_post_on_the_roster__c</fullName>
        <description>1: Pre; 3: RSC; 5: Mid</description>
        <inlineHelpText>1: Pre; 3: RSC; 5: Mid</inlineHelpText>
        <label>Pre/mid/post on the roster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Progress_Measure__c</fullName>
        <description>This is a field that describes whether the student met growth - must be one of the 3 values</description>
        <inlineHelpText>This is a field that describes whether the student met growth - must be one of the 3 values</inlineHelpText>
        <label>Progress Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Expected</fullName>
                </value>
                <value>
                    <fullName>Accelerated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantile_Score__c</fullName>
        <label>Quantile Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantile_Student_Target_Score__c</fullName>
        <label>Quantile Student Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCT_Ability_Score__c</fullName>
        <description>Student&apos;s score in Reading Comprehension</description>
        <inlineHelpText>Student&apos;s score in Reading Comprehension</inlineHelpText>
        <label>RCT Ability Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Change_Academic_Motivation__c</fullName>
        <description>Indicator of change for Academic Motivation</description>
        <label>RSC Change Academic Motivation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Action_Orientation__c</fullName>
        <label>RSC Change Action Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
                <value>
                    <fullName>1: Positive change; 0: No change; -1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change; 0: No change; -1: Negative change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Adults__c</fullName>
        <description>Indicator of change for Adults</description>
        <label>RSC Change Adults</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Assertiveness__c</fullName>
        <description>Indicator of change for Assertiveness</description>
        <label>RSC Change Assertiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Critical_Thinking__c</fullName>
        <description>Indicator of change for Critical Thinking</description>
        <label>RSC Change Critical Thinking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>